--- a/src/import.html
+++ b/src/import.html
@@ -10,17 +10,15 @@
       .button { margin-bottom: 0; }
     </style>
   </head>
-  <body style="padding: 1em;">
+  <body>
 
     <!-- header -->
-    <div class="callout">
-      <h3 data-i18n="import"><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> </h3>
-    </div>
+    <div class="prime header" data-i18n="import"></div>
 
     <!-- main -->
-    <div class="callout" style="padding: 2em;">
+    <div class="prime">
 
-      <div class="hide-if-upgrade hide-unimportant">
+      <div class="hide-if-upgrade hide">
         <h4>Import Settings from FoxyProxy 6.x (current version)</h4>
         <p>FoxyProxy can use <a href="https://support.mozilla.org/products/firefox/sync" target="_blank">Firefox Sync</a> to synchronize settings across different installations of Firefox. But if you don't use Firefox Sync or want to share your settings with friends, <a id="export">export</a> FoxyProxy settings. Then use this page to import those settings. By default, the file is called foxyproxy.json.</p>
         <input id="importJson" type="file" accept=".json">
@@ -36,7 +34,7 @@
         </div>
       </div>
 
-      <div class="hide-if-not-upgrade hide-unimportant">
+      <div class="hide-if-not-upgrade hide">
         <h4>Import Settings From Older FoxyProxy Versions</h4>
         <p>You just upgraded from an older version of FoxyProxy. Firefox has completely changed the addon system since the previous FoxyProxy version. Unfortunately, due to Firefox 57+ limitations, we cannot read your FoxyProxy settings automatically. But they are not lost. To import your old settings, please select the file <strong>foxyproxy.xml</strong> below. You can find it in the <a target="_blank" href="https://support.mozilla.org/en-US/kb/profiles-where-firefox-stores-user-data#w_how-do-i-find-my-profile">Firefox profile directory</a>.</p>
         <input id="importXml1" type="file" accept=".xml">
@@ -44,7 +42,7 @@
 
 
       <div style="text-align: right;">
-        <button id="cancelBtn" type="button" class="button" data-i18n="cancel"></button>
+        <button id="cancel" type="button" class="button" data-i18n="cancel"></button>
       </div>
 
     </div>
