--- a/src/log.html
+++ b/src/log.html
@@ -9,73 +9,44 @@
     <style>
       tbody tr:nth-child(even) { background-color: #f5fffa  !important; }
       tbody tr:hover { background-color: #cae1d3 !important; }
-      tbody td { padding: 0.2em; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+      tbody td { overflow-x: auto; text-overflow: ellipsis; white-space: nowrap; scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
       td:nth-child(1) { max-width: 20em; }      
       td:nth-child(2) { max-width: 5em; }
       td:nth-child(3) { width: 1em; border: 2px solid #fff; }
       td:nth-child(4) { max-width: 8em; }
       td:nth-child(5) { max-width: 8em; }
       td:nth-child(6) { max-width: 14em; }
-      #spinner {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: rgba(255, 255, 255, 0.8);
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        opacity: 0;
-        z-index: 10000;
-        transition: all 1s ease-in-out;
-        font-size: 20em;
-      }
-      #spinner.on { opacity: 0.5; }
+      .button { margin-bottom: 0; }
+      .scroll {  max-height: 40vh; overflow-y: auto; scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
     </style>
   </head>
-  <body style="padding: 1em;">
+  <body>
 
     <!-- header -->
-    <div class="callout">
-      <h3 data-i18n="options"><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> FoxyProxy </h3>
-    </div>
+    <div class="prime header" data-i18n="log"></div>
+    
 
     <!-- spinner --> <!-- options, patterns, log -->
     <div id="spinner" class="on"><span class="fa fa-refresh fa-spin fp-orange"></span></div>
 
 
     <!-- main -->
-    <div class="callout" style="padding: 2em;">
+    <div class="prime">
 
 
-      <div style="display: flex;">
+      <h3 style="display: inline-block; margin-right: 0.5em;" data-i18n="log"></h3>
+      <input name="onOff" class="switch-input" id="onOff" type="checkbox" checked>
+      <label class="switch-paddle" for="onOff">
+        <span class="show-for-sr">On/Off</span>
+        <span class="switch-active bold" aria-hidden="true" style="color: white">On</span>
+        <span class="switch-inactive bold fp-orange" aria-hidden="true">Off</span>
+      </label>
 
-        <div style="flex: 1;">
-          <h3 style="display: inline-block; margin-right: 0.5em;" data-i18n="log"></h3>
-          <input name="onOff" class="switch-input" id="onOff" type="checkbox" checked>
-          <label class="switch-paddle" for="onOff">
-            <span class="show-for-sr">On/Off</span>
-            <span class="switch-active bold" aria-hidden="true" style="color: white">On</span>
-            <span class="switch-inactive bold fp-orange" aria-hidden="true">Off</span>
-          </label>
-        </div>
 
-        <div style="flex: 1; text-align: right;">
-          <button type="button" class="button" data-i18n="back">&#x25c1; </button>
-          <button type="button" class="button" data-i18n="refresh"></button>
-          <button type="button" class="button alert" data-i18n="clear"></button>
-        </div>
-
+      <div class="prime"><strong>Failed URLs display here, too!</strong> A row in this log does not mean the URL successfully loaded. The log shows only how <strong>attempts</strong> were made to load URLs. If the proxy server was not responding or there was some other problem which prevented the URL from loading, the URL still displays here. This is a limitation of Firefox 57+.
       </div>
 
-
-
-      <div class="callout"><strong>Failed URLs display here, too!</strong> A row in this log does not mean the URL successfully loaded. The log shows only how <strong>attempts</strong> were made to load URLs. If the proxy server was not responding or there was some other problem which prevented the URL from loading, the URL still displays here. This is a limitation of Firefox 57+.
-      </div>
-
-      <div style="max-height: 40vh; overflow-y: auto;">
+      <div class="scroll">
         <table style="width: 100%;">
           <thead>
             <tr>
@@ -93,8 +64,16 @@
             </tr>
           </thead>
 
+
+
           <tbody></tbody>
         </table>
+      </div>
+
+      <div style="margin-top: 1em; text-align: right;">
+        <button type="button" class="button" data-i18n="back">&#x25c1; </button>
+        <button type="button" class="button" data-i18n="refresh"></button>
+        <button type="button" class="button alert" data-i18n="clear"></button>
       </div>
 
     </div>
